first round of styling and layout fixes

--- a/wp-content/themes/g5_helium/custom/scss/custom.scss
+++ b/wp-content/themes/g5_helium/custom/scss/custom.scss
@@ -1,2 +1,10 @@
 @import "dependencies";
+@import "variables";
+@import "core";
+@import "mixins";
+@import "carousel";
+@import "nav";
+@import "badges";
+@import "about";
 @include import-font('montserrat');
+
